friend page not showing fix

--- a/cz3002_web-app/src/components/characterpage/CharacterPage.css
+++ b/cz3002_web-app/src/components/characterpage/CharacterPage.css
@@ -269,6 +269,7 @@
 .characterpage_container>.background>.bottom_btn>.sidebar-container>.sidebar-btn {
     display: flex;
     flex-direction: column;
+    margin-inline: auto;
 }
 
 .characterpage_container>.background>.bottom_btn>.sidebar-container>.sidebar-btn>.inner-btns {
